# VectorSwarm

./: AGENTS.md  CMakeLists.txt  README.md  VectorSwarm_2026_02_28-08_07_02.ngfx-shaderprof  forest.md  frame.md  gputrace.ngfx-gputrace  gputrace.ngfx-gputrace.layout
DefconDraw/: API.md  CMakeLists.txt  README.md
DefconDraw/docs/: api.md  architecture.md  image_support_plan.md
DefconDraw/examples/: demo.c  demo_sdl.c  demo_vk_sdl.c
DefconDraw/examples/shaders/: bloom.frag  composite.frag  fullscreen.vert
DefconDraw/include/: vg.h  vg_image.h  vg_palette.h  vg_pointer.h  vg_svg.h  vg_text_fx.h  vg_text_layout.h  vg_ui.h  vg_ui_ext.h
DefconDraw/src/: vg.c  vg_image.c  vg_internal.h  vg_palette.c  vg_pointer.c  vg_svg.c  vg_text_fx.c  vg_text_layout.c  vg_ui.c  vg_ui_ext.c
DefconDraw/src/backends/vulkan/: vg_vk.c
DefconDraw/src/backends/vulkan/shaders/: line.vert
DefconDraw/src/fx/: vg_fx.c
assets/images/: industry.png.old
assets/mods/: alien_earth.it
build-asan/: CMakeCache.txt  CTestTestfile.cmake  Makefile  VectorSwarm  cmake_install.cmake  level_roundtrip_test
build-asan/DefconDraw/: CTestTestfile.cmake  Makefile  cmake_install.cmake  vg_demo  vg_demo_sdl  vg_demo_vk_sdl
data/: playlist.cfg
data/levels/: boids.cfg  combat.cfg  level_Underwater.cfg  level_avalon.cfg  level_blank.cfg  level_blankl.cfg  level_blanklrrrr.cfg  level_defender.cfg  level_enemy_at_the_gates.cfg  level_enemy_radar.cfg  level_event_horizon.cfg  level_event_horizon_legacy.cfg  level_firestorm.cfg  level_fog_of_war.cfg  level_forest_of_spores.cfg  level_gas_town.cfg  level_grid.cfg  level_high_plains_drifter.cfg  level_high_plains_drifter_2.cfg  level_ice_9.cfg  level_revolver.cfg  level_solaris.cfg  level_sonar_abyss.cfg  level_web_of_despair.cfg
docs/: SHIPYARD_PLAN.md  boss.md  debug.md  fire.md  forest_attempt_log.md  forest_lessons_learned.md  forest_pipeline_debug.md  industry_parallax_plan.md  insect.md  leveldef_schema.md  planetarium_refactor_plan.md  underwater.md
src/: acoustics_ui_layout.c  acoustics_ui_layout.h  audio.c  audio.h  boss.c  boss.h  death_teletype_messages.h  enemy.c  enemy.h  game.c  game.h  level_editor.c  level_editor.h  leveldef.c  leveldef.h  main.c  menu.c  menu.h  obj_model.c  obj_model.h  planetarium_propaganda.h  render.c  render.h  settings.c  settings.h  texture_atlas.c  texture_atlas.h  ui_layout.h  wavetable_poly_synth_lib.c  wavetable_poly_synth_lib.h
src/planetarium/: commander_nick_dialogues.h  planetarium_registry.c  planetarium_registry.h  planetarium_types.h  planetarium_validate.c  planetarium_validate.h
src/planetarium/systems/: system_cinder.h  system_solace.h
src/shaders/: arc_beam.frag  fire.frag  fog.frag  forest.frag  forest_cache.frag  forest_flora.frag  grid.frag  grid.vert  grid_sim.frag  ice.frag  industry.frag  particle.frag  particle.vert  particle_bloom.frag  radar_line.frag  radar_line.vert  revolver.frag  structure_tile.frag  structure_tile.vert  terrain.frag  terrain.vert  terrain_wire.frag  terrain_wire.vert  underwater.frag  underwater2.frag  underwater_kelp.frag  wormhole_line.frag  wormhole_line.vert
tests/: level_roundtrip_test.c
